criar LOGIN e LOGOUT de usuário - Realizar correção do projeto e mesclar API usuários e API musicas closed #40 #25
